--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   <h1>JavaScript Projects</h1>
+
+  <p><a href="05-cart-quantity.html">Lesson 5 cart quantity project</a></p>
 </body>
 </html>
