--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <h1>JavaScript Projects</h1>
 
   <p><a href="05-cart-quantity.html">Lesson 5 cart quantity project</a></p>
+  
+  <p><a href="06-rock-paper-scissors.html">Lesson 6 booleans project</a></p>
 </body>
 </html>
