--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -83,6 +83,9 @@
       alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
 
+
+    <p><a href="10-rock-paper-scissors.html">Click here</a> to see final project.</p>
+
     <script>
       
     </script>
