--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -84,7 +84,7 @@
     ">Scissors</button>
 
 
-    <p><a href="10-rock-paper-scissors.html">Click here</a> to see final project.</p>
+    <p><a href="10-rock-paper-scissors.html">Click here</a> to see the final version of the project.</p>
 
     <script>
       
