--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <p><a href="05-cart-quantity.html">Lesson 5 cart quantity project</a></p>
   
   <p><a href="06-rock-paper-scissors.html">Lesson 6 booleans project</a></p>
+
+  <p><a href="08-rock-paper-scissors.html">Lesson 8 Object project</a></p>
 </body>
 </html>
