--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
   <p><a href="06-rock-paper-scissors.html">Lesson 6 booleans project</a></p>
 
   <p><a href="08-rock-paper-scissors.html">Lesson 8 Object project</a></p>
+
+   <p><a href="09-dom-projects.html">Lesson 9 DOM project</a></p>
+
+
+  
 </body>
 </html>
