--- a/10-dom-projects.html
+++ b/10-dom-projects.html
@@ -64,6 +64,9 @@
     " class="calculate-button">Calculate</button>
     <p class="js-total-cost"></p>
 
+  <p style="margin-top: 100px;">Rock Paper Scissors</p>
+    <p><a href="10-rock-paper-scissors.js">Click here</a></p>
+    
     <script>
       String(25)
       console.log('25' - 5);
