--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
    <p><a href="09-dom-projects.html">Lesson 9 DOM project</a></p>
 
+     <p><a href="10-dom-projects.html">Lesson 10 DOM project with CSS</a></p>
+
 
   
 </body>
