--- a/10-dom-projects.html
+++ b/10-dom-projects.html
@@ -65,7 +65,7 @@
     <p class="js-total-cost"></p>
 
   <p style="margin-top: 100px;">Rock Paper Scissors</p>
-    <p><a href="10-rock-paper-scissors.js">Click here</a></p>
+    <p><a href="10-rock-paper-scissors.html">Click here</a></p>
     
     <script>
       String(25)
