--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -19,6 +19,8 @@
 
     <div class="js-todo-list todo-grid"></div>
 
+    <p style="margin-top: 100px;"><a href="12-todo-list.html">Click here to see the final version of the project</a></p>
+
     <script src="scripts/11-todo-list.js"></script>
   </body>
 </html>
