--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
      <p><a href="10-dom-projects.html">Lesson 10 DOM project with CSS</a></p>
 
+   <p><a href="11-todo-list.html">Lesson 11 Todo list project</a></p>
+
+   <p><a href="12-todo-list.html">Lesson 12 Todo list project</a></p>
+
+
+  
+
 
   
 </body>
