--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="styles/11-todo-list.css">
+    <link rel="stylesheet" href="11-todo-list.css">
   </head>
   <body>
     <p>Todo List</p>
@@ -19,8 +19,6 @@
 
     <div class="js-todo-list todo-grid"></div>
 
-    <p style="margin-top: 100px;"><a href="12-todo-list.html">Click here to see the final version of the project</a></p>
-
-    <script src="scripts/11-todo-list.js"></script>
+    <script src="11-todo-list.js"></script>
   </body>
 </html>
