--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Todo List</title>
-    <link rel="stylesheet" href="11-todo-list.css">
-  </head>
-  <body>
-    <p>Todo List</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo List practice 1</title>
+  <link rel="stylesheet" href="styles/11-todo-list.css">
+</head>
+<body>
+  <p>Todo List Practice 2</p>
+  <input placeholder="Todo name" class="js-name-input">
+  <button onclick="addTodo()">Add</button>
 
-    <div class="todo-input-grid">
-      <input placeholder="Todo name"
-        class="js-name-input name-input">
-      <input type="date"
-        class="js-due-date-input due-date-input">
-      <button onclick="
-        addTodo();
-      " class="add-todo-button">Add</button>
-    </div>
 
-    <div class="js-todo-list todo-grid"></div>
+  <p>Todo List</p>
+  <input placeholder="Todo name" class="js-name-input2">
+  <button onclick="addTodo2()">Add</button>
 
-    <script src="11-todo-list.js"></script>
-  </body>
+  <div class="js-todo-list"></div>
+
+  <script src="scripts/11-todo-list.js"></script>
+</body>
 </html>
