--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -18,6 +18,8 @@
 
   <div class="js-todo-list"></div>
 
+  <p style="margin-top: 100px;"><a href="12-todo-list.html">Click here to see the final version of the project</a></p>
+
   <script src="scripts/11-todo-list.js"></script>
 </body>
 </html>
