--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -20,6 +20,6 @@
 
   <p style="margin-top: 100px;"><a href="12-todo-list.html">Click here to see the final version of the project</a></p>
 
-  <script src="scripts/11-todo-list.js"></script>
+  <script src="11-todo-list.js"></script>
 </body>
 </html>
