--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
    <p><a href="12-todo-list.html">Lesson 12 Todo list project</a></p>
 
-
+<p><a href="12-rock-paper-scissors.html">Lesson 12 Advanced Funtions Project</a></p>
   
 
 
