--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
    <p><a href="11-todo-list.html">Lesson 11 Todo list project</a></p>
 
    <p><a href="12-todo-list.html">Lesson 12 Todo list project</a></p>
-
-<p><a href="12-rock-paper-scissors.html">Lesson 12 Advanced Funtions Project</a></p>
-  
-
-
-  
+    <p><a href="12-rock-paper-scissors.html">Lesson 8 Object project</a></p>
 </body>
 </html>
+
