--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
    <p><a href="11-todo-list.html">Lesson 11 Todo list project</a></p>
 
    <p><a href="12-todo-list.html">Lesson 12 Todo list project</a></p>
-    <p><a href="12-rock-paper-scissors.html">Lesson 8 Object project</a></p>
+    <p><a href="12-rock-paper-scissors.html">Lesson 12 Advanced Functions</a></p>
 </body>
 </html>
+
 
